Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1615,5 +1615,174 @@ papers:
     authors: Vargas, A. O. (2005)
     link:
       display: "Revista Chilena de Historia Natural, 78, 4, 739-752. doi:
-        10.4067/S0716-078X2005000400012 ."
+        10.4067/S0716-078X2005000400012."
       url: https://scielo.conicyt.cl/scielo.php?script=sci_arttext&pid=S0716-078X2005000400012&lng=en&nrm=iso&tlng=en
+  - highlight: 0
+    title: "Undergraduate teaching of evolution in Chile: More than natural
+      selection."
+    authors: Ahumada, P., Astorga, G., Bull-Hereñu, K., Cabrera, R., Caputo, L.,
+      Carmona, C., Cecchi, M. C., Cortés, N., Cortez, S., Dorador, C., Fredes,
+      F., Guerrero-Bosagna, C., Henny, P., Libedinsky, C., Marcelo, W., Márquez,
+      I. N., Martínez, J., Medina, M., Parra, D., Pohl, N., Potttock, H.,
+      Ossandón, T., Razeto, P., Rubilar, D., Salas, C., Salinas, F., Sepúlveda,
+      E., Soto, C., Suárez, R., Vargas, A., Vega-Zúñiga, T., Velásquez, N.,
+      Vidal., J., Villagra., C.A., & Villavicencio, C. P. (2005)
+    description: Abstract.
+    link:
+      url: https://scielo.conicyt.cl/scielo.php?script=sci_arttext&pid=S0716-078X2005000100013
+      display: "Revista Chilena de Historia Natural, 78, 1, 169-170. doi:
+        10.4067/S0716-078X2005000100013."
+  - highlight: 0
+    title: The mapping of the visual field onto the dorso-lateral tectum of the
+      pigeon (Columba livia) and its relations with retinal specializations.
+    description: Abstract. Most of the physiological studies of the pigeon
+      retino-tectal visual pathway have investigated the accessible tectum, a
+      small dorso-lateral tectal section that can be easily accessed by a simple
+      craniotomy. However, at present we lack a detailed study of the
+      topographical arrangement between the visual field, the retina and the
+      accessible tectum. In particular, it is not known which section of the
+      visual field is mapped onto the accessible tectum, and which of the
+      specialized retinal areas mediates this projection. Here we determined,
+      using local field potential (LFP) recordings and reverse retinoscopy, the
+      shape, size and position in the visual space of the portion of the visual
+      field mapped onto the accessible tectum (called here the accessible visual
+      field, or AVF). Using this data and the mapping of Nalbach et al. [Vis.
+      Res. 30 (4) (1990) 529], the retinal area corresponding to the AVF was
+      determined. Such retinal area was also directly delimited by means of
+      retrograde transport of DiI. The results indicate that the AVF is a
+      triangular perifoveal zone encompassing only 15% of total visual field.
+      The retinal region corresponding to the AVF has the shape of an elongated
+      triangle that runs parallel to the visual equator and contains the fovea,
+      the tip of the pecten, a perifoveal region of the yellow field and a small
+      crescent of the red field. In agreement with this anatomical
+      heterogeneity, visual evoked potentials measured in different parts of the
+      accessible tectum present steep variations in shape and size. These
+      results are helpful to better design and interpret anatomical and
+      physiological experiments involving the pigeon’s visual system.
+    authors: Letelier, J. C., Marin, G., Sentis, E., Tenreiro, A., Fredes, F., &
+      Mpodozis, J. (2004)
+    link:
+      url: https://www.sciencedirect.com/science/article/abs/pii/S0165027003003030
+      display: "Journal of Neuroscience Methods, 132, 2, 161-168. doi:
+        10.1016/j.jneumeth.2003.09.007."
+  - highlight: 0
+    title: Understanding the parts in terms of the whole.
+    authors: Cornish-Bowden, A., Cárdenas, M. L., Letelier, J. C., Soto-Andrade, J.,
+      & Abarzúa, F. G. (2004)
+    description: Abstract.
+    link:
+      url: https://www.sciencedirect.com/science/article/abs/pii/S0248490004001698
+      display: "Biology of the Cell, 96, 9, 713-717. doi:
+        10.1016/j.biolcel.2004.06.006."
+  - highlight: 0
+    title: "Answering Cuvier: Notes on the systemic/historic nature of living beings."
+    description: Abstract.
+    authors: Cecchi, M. C., Vargas, A., Villagra, C. A., & Mpodozis, J. (2004)
+    link:
+      url: https://www.ingentaconnect.com/contentone/imp/chk/2004/00000011/00000004/art00001;jsessionid=hcduwbmuhtze.x-ic-live-01
+      display: " Cybernetics & Human Knowing, 11, 4, 2004, 11-19(9)."
+  - highlight: 0
+    title: "Spatial organization of the pigeon tectorotundal pathway: An
+      interdigitating topographic arrangement."
+    link:
+      url: https://onlinelibrary.wiley.com/doi/abs/10.1002/cne.10591
+      display: "Journal of Comparative Neurology, 458: 361-380. doi: 10.1002/cne.10591."
+    authors: Marín, G., Letelier, J. C., Henny, P., Sentis, E., Farfán, G., Fredes,
+      F., Pohl, N., Karten, H., & Mpodozis, J. (2003)
+    description: >
+      Abstract. The retinotectofugal system is the main visual pathway
+      projecting upon the telencephalon in birds and many other nonmammalian
+      vertebrates. The ascending tectal projection arises exclusively from cells
+      located in layer 13 of the optic tectum and is directed bilaterally toward
+      the thalamic nucleus rotundus. Although previous studies provided evidence
+      that different types of tectal layer 13 cells project to different
+      subdivisions in Rt, apparently without maintaining a retinotopic
+      organization, the detailed spatial organization of this projection remains
+      obscure. We reexamined the pigeon tectorotundal projection using
+      conventional tracing techniques plus a new method devised to perform small
+      deep‐brain microinjections of crystalline tracers. We found that discrete
+      injections involving restricted zones within one subdivision retrogradely
+      label a small fraction of layer 13 cells that are distributed throughout
+      the layer, covering most of the tectal representation of the contralateral
+      visual field. Double‐tracer injections in one subdivision label distinct
+      but intermingled sets of layer 13 neurons. These results, together with
+      the tracing of tectal axonal terminal fields in the rotundus, lead us to
+      propose a novel “interdigitating” topographic arrangement for the
+      tectorotundal projection, in which intermingled sets of layer 13 cells,
+      presumably of the same particular class and distributed in an organized
+      fashion throughout the surface of the tectum, terminate in separate
+      regions within one subdivision. This spatial organization has significant
+      consequences for the understanding of the physiological and functional
+      properties of the tectofugal pathway in birds.
+  - highlight: 0
+    title: Autopoietic and (M,R) systems.
+    description: Abstract. From the many attempts to produce a conceptual framework
+      for the organization of living systems, the notions of (M,R) systems and
+      Autopoiesis stand out for their rigor, their presupposition of the
+      circularity of metabolism, and the new epistemologies that they imply.
+      From their inceptions, these two notions have been essentially
+      disconnected because each has defined its own language and tools. Here we
+      demonstrate the existence of a deep conceptual link between (M,R) systems
+      and Autopoietic systems. This relationship permits us to posit that
+      Autopoietic systems, which have been advanced as capturing the central
+      aspects of living systems, are a subset of (M,R) systems. This result, in
+      conjunction with previous theorems proved by Rosen, can be used to outline
+      a demonstration that the operation of Autopoietic systems cannot be
+      simulated by Turing machines. This powerful result shows the potential of
+      linking these two models. Finally, we suggest that the formalism of (M,R)
+      systems could be used to model the circularity of metabolism.
+    link:
+      url: https://www.sciencedirect.com/science/article/abs/pii/S0022519303000341
+      display: "Journal of Theoretical Biology, 222, 2, 261-272. doi:
+        10.1016/S0022-5193(03)00034-1."
+    authors: Letelier, J. C., Marín, G., & Mpodozis, J. (2003)
+  - highlight: 0
+    title: "Emplumando dinosaurios: La transición evolutiva de terópodos a aves."
+    description: >
+      Abstract. Desde el inicio del pensamiento evolutivo, el origen de las aves
+      ha constituido uno de los problemas más polémicos de la biología
+      evolutiva. En la actualidad, un gran cúmulo de evidencia indica que dicho
+      problema se encuentra de gran manera resuelto. La evidencia osteológica,
+      oológica, etológica y tegumentaria sustenta fuertemente la hipótesis que
+      las aves descienden de dinosaurios terópodos, en particular a partir de
+      formas clasificadas dentro de Maniraptora. Los contados investigadores que
+      hoy en día se oponen a dicha hipótesis han sustentado sus críticas en
+      observaciones erróneas o dentro de un marco teórico obsoleto. Este trabajo
+      ofrece una breve discusión tanto de las principales líneas de evidencia en
+      sustento de esta hipótesis filogenética como de los argumentos utilizados
+      en su contra.
+    link:
+      display: Hornero, 18, (1), 1-11.
+      url: http://www.scielo.org.ar/scielo.php?script=sci_arttext&pid=S0073-34072003000100001
+    authors: Chiappe, L. M., & Vargas, A. (2003)
+  - highlight: 0
+    title: Metabolic networks from (M, R) systems and autopoiesis perspective.
+    description: >-
+      Abstract. This paper is the first one of a series devoted to the analysis
+      of metabolic networks. Its aim is to establish the theoretical framework
+      for this analysis.
+
+
+      Two different lines of research are considered: the one about metabolism-repair systems ((ℳ, ℛ)), introduced by Robert Rosen as an abstract representation of cell metabolic activity, and the concept of autopoiesis developed by Humberto Maturana and Francisco Varela.
+
+
+      Both concepts have been recently connected by Letelier et al., determining that the set of autopoietic systems is a subset of the set of general abstract (ℳ, ℛ) systems. In fact, every specific (ℳ, ℛ) system is an autopoietic one, being the boundary, which specifies each system as a unity, the main element of autopoietic systems which is not formalized in Rosen's representation.
+
+
+      This paper introduces the definition of boundary — a physical boundary and a functional one — for (ℳ, ℛ) systems in the context of a representation using category theory.
+
+
+      The concept of complete (ℳ, ℛ) system is also introduced by means of a process of completion in categories which is functorial, natural and universal.
+    authors: Zaretzky, A. N., & Letelier, J. C.  (2002)
+    link:
+      display: "Journal of Biological Systems, 10, 03, 265-280. doi:
+        10.1142/S0218339002000573."
+      url: https://www.worldscientific.com/doi/abs/10.1142/S0218339002000573
+  - highlight: 0
+    title: Los derroteros científicos de Francisco Varela (1946-2001).
+    description: Abstract.
+    authors: Letelier, J. C. (2001)
+    link:
+      url: https://scielo.conicyt.cl/scielo.php?script=sci_arttext&pid=S0716-97602001000200002
+      display: "Biological Research, 34, (2), 7-13. doi:
+        10.4067/S0716-97602001000200002."
