Update Listas “publicaciones”

--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -2395,3 +2395,21 @@ papers:
     authors: Cordero, P., Garreton, M. A., Giannini, H., Goic, A., Izquierdo, L.,
       Latorre, R., Minguell, J., Ureta, T., Varela, F., & Vivaldi, E.  (1984)
     description: Abstract.
+  - highlight: 0
+    title: "Regional specialization of the quail retina: Ganglion cell density and
+      oil droplet distribution."
+    link:
+      url: https://www.sciencedirect.com/science/article/abs/pii/0304394084902763
+      display: "Neuroscience Letters, 51, 1, 145-150. doi:
+        10.1016/0304-3940(84)9027.6-3."
+    description: >+
+      Abstract. The ganglion cell density of the quail's retina was studied in
+      sections and whole mounts. Two regions of high ganglion cell density were
+      found, corresponding to an afoveate area centralis and an area dorsalis.
+      Oil droplets were found to be isotropically distributed throughout the
+      retina. It is proposed that the significance of such retinal regional
+      specialization, in comparison to similar studies in the pigeon and the
+      chick, is that regional specialization in the avian retina is more closely
+      related to feeding habits than to phylogenetic descendence.
+
+    authors: Budnik, V., Mpodozis, J., Varela, F. J., & Maturana, H. R. (1984)
